# HockeySlam

./: .gitignore  LICENSE  README.md  build.bat
android/: .gitignore  build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  game-activity.cpp
android/app/src/main/res/drawable/: ic_iconcropped_out.xml  ic_launcher_bg.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_hoki.xml
android/app/src/main/res/values/: strings.xml  styles.xml
android/gradle/wrapper/: gradle-wrapper.properties
game/: ai_system.cpp  ai_system.h  anim_system.cpp  anim_system.h  game_assets.cpp  game_assets.h  game_camera.cpp  game_camera.h  game_collections.cpp  game_collections.h  game_entity.cpp  game_entity.h  game_goalie.cpp  game_input.cpp  game_input.h  game_kinematics.h  game_light.cpp  game_light.h  game_main.cpp  game_main.h  game_math.h  game_memory.cpp  game_memory.h  game_offense.cpp  game_rand.cpp  game_render.cpp  game_render.h  game_state.cpp  game_state.h  game_state_debug.cpp  game_state_ended.cpp  game_state_ending.cpp  game_state_perf_test.cpp  game_state_ready.cpp  game_state_replaying.cpp  game_state_result.cpp  game_state_setup.cpp  game_state_started.cpp  imui_easing.cpp  imui_system.cpp  (+14 more)
game/asset/: asset_anim.h  asset_dds.cpp  asset_dds.h  asset_decal.h  asset_file.cpp  asset_file.h  asset_gradient.cpp  asset_gradient.h  asset_material.cpp  asset_material.h  asset_model.cpp  asset_model.h  asset_obj.cpp  asset_obj.h  asset_shader.cpp  asset_shader.h  asset_string.cpp  asset_string.h  asset_text.cpp  asset_text.h  asset_texture.cpp  asset_texture.h
game/debug/: debug_assert.h  debug_log.h  debug_strings.cpp
glsl/: fragmentshader.frag  pbr.frag  pbr_sample.frag  pbr_wip.frag  vertex_shader_inst.vert  vertexshader.vert
glsl/incl/: glsl_header.h  light_inc.glsl  material.glsl  shadow_mapping_inc.glsl
ogl/: ogl_extensions.cpp  ogl_imui.cpp  ogl_main.cpp  ogl_main.h  ogl_physics.cpp  ogl_primitives.cpp  ogl_shader.cpp  ogl_text.cpp
res/models/: arrow.glb  crowd.glb  field.glb  goalie.glb  hockeyplayer.glb  posts.glb  posts_old.glb  puck.glb  seat.glb  sneik.glb  stands.glb  stands_crowd.glb
res/shaders/gl/: filled.frag  fragmentshader_weights.frag  noop.frag  reflection.frag  simple.frag  simple.vert  simple_skinned.vert  simple_textured.vert  text.frag  text.vert  ui.frag  vertexshader_weights.vert
res/shaders/gles/: filled.frag  fragmentshader_weights.frag  light.frag  noop.frag  reflection.frag  simple.frag  simple.vert  simple_skinned.vert  simple_textured.vert  text.frag  text.vert  ui.frag  vertexshader_weights.vert
windows/: win_main.cpp  win_main.h
